--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "testSeed": "jest __tests__/seed/ --coverage",
     "lint": "eslint . --ext .jsx,.js"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "@babel/preset-react": "^7.10.4",
     "axios": "^0.19.2",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
