--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "testServer": "jest __tests__/server",
     "seedDb": "node db/seedDatabase.js",
     "server": "node index.js",
+    "build": "webpack -D",
     "lint": "eslint . --ext .jsx,.js"
   },
   "repository": {
