Refactoed to use environmental variables. Tests still pass

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "testServer": "jest __tests__/server",
     "seedDb": "node db/seedDatabase.js",
     "server": "node index.js",
-    "build": "webpack -D",
+    "build": "webpack",
     "lint": "eslint . --ext .jsx,.js"
   },
   "repository": {
@@ -24,20 +24,20 @@
   "homepage": "https://github.com/PetToyCo/ProductRecommendations#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.22",
     "morgan": "^1.10.0",
-    "path": "^0.12.7",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "path": "^0.12.7",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
