Added bashScripts and updated ReadMe with usage instructions

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,3 +4,10 @@ __tests__
 coverage
 wepback.config.js
 client/src/**/*
+bashScript.sh
+bashScript2.sh
+bashScript3.sh
+bashScript4.sh
+bashScript5.sh
+bashScript6.sh
+bashScript7.sh
