--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_modules
 coverage
+bashScript.sh
+bashScript2.sh
+bashScript3.sh
+bashScript4.sh
+bashScript5.sh
+bashScript6.sh
+bashScript7.sh
