Added compression for bundle file

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "compression-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "path": "^0.12.7",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "^7.20.3",
     "jest": "^26.1.0",
     "nock": "^13.0.2",
+    "path": "^0.12.7",
     "pre-commit": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
